16 April 2025: Wouter
	- Increase default to `num-queries-per-thread: 2048`, when unbound is
	  compiled with libevent. It makes saturation of the task queue more
	  resource intensive and less practical. Thanks to Shiming Liu,
	  Network and Information Security Lab, Tsinghua University for the
	  report.

11 April 2025: Wouter
	- Tag for 1.23.0rc2. This became the release of 1.23.0 on 24 April
	  2025. The code repository continues with 1.23.1 in development.

11 April 2025: Yorgos
	- Merge #1265: Fix WSAPoll.

10 April 2025: Wouter
	- Fix for print of connection type in log-replies for dot and doh.

9 April 2025: Wouter
	- Fix to detect if atomic_store links in configure.
	- Fix #1264: unbound 1.22.0 leaks memory when doing DoH.

8 April 2025: Wouter
	- Tag for 1.23.0rc1.
	- Fix fast_reload to print chroot with config file name.

7 April 2025: Yorgos
	- Merge #902: DNS Error Reporting (RFC 9567). Introduces new
	  configuration option 'dns-error-reporting' and new statistics for
	  'num.dns_error_reports'.

4 April 2025: Wouter
	- Fix mesh_copy_client_info to omit null contents from copy.
	- Fix comment name in the rpz nsdname test.
	- Fix nettle compile for warnings and ticket keys.
	- Fix redis_replica test for unused option defaults and log printout.
	- Fix test to speed up common.sh script kill_pid.
	- Fix to update common.sh for speed of kill_pid.

4 April 2025: Yorgos
	- Merge #1019: Redis read-only replica support.
	  Introduces new 'redis-replica-*' options for the Redis cache backend.

3 April 2025: Wouter
	- Fix #1263: Exempt loopback addresses from wait-limit.
	- Fix wait-limit-netblock and wait-limit-cookie-netblock config parse
	  to allow two arguments.
	- Fix ub_event and include dnstap and win_svc headers.
	- Fix test for stat_values for wait limit defaults for localhost.
	- Fix parameter unused warning in net_help.c.

2 April 2025: Yorgos
	- Merge #1262 from markyang92, fix build with