@@ -61,6 +61,12 @@
 #include "sldns/str2wire.h"
 #include "sldns/wire2str.h"
 
+#ifdef HAVE_SSL
+#ifdef HAVE_OPENSSL_ERR_H
+#include <openssl/err.h>
+#endif
+#endif
+
 /** verbose signature test */
 static int vsig = 0;
 
@@ -509,10 +515,133 @@ nsec3_hash_test(const char* fname)
 
 #define SRCDIRSTR xstr(SRCDIR)
 
+#if defined(HAVE_SSL) && defined(USE_SHA1)
+/* Detect if openssl is configured to disable RSASHA1 signatures,
+ * with the rh-allow-sha1-signatures disabled. */
+static int
+rh_allow_sha1_signatures_disabled(void)
+{
+	EVP_MD_CTX* ctx;
+	EVP_PKEY* evp_key;
+	/* This key is rdata from nlnetlabs.nl DNSKEY from 20250424005001,
+	 * with id=50602 (ksk), size=2048b.
+	 * A 2048 bit key is taken to avoid key too small errors. */
+	unsigned char key[] = {
+		0x03, 0x01, 0x00, 0x01, 0xBC, 0x0B, 0xE8, 0xBB,
+		0x97, 0x4C, 0xB5, 0xED, 0x6F, 0x6D, 0xC2, 0xB1,
+		0x78, 0x69, 0x93, 0x1C, 0x72, 0x19, 0xB1, 0x05,
+		0x51, 0x13, 0xA1, 0xFC, 0xBF, 0x01, 0x58, 0x0D,
+		0x44, 0x10, 0x5F, 0x0B, 0x75, 0x0E, 0x11, 0x9A,
+		0xC8, 0xF8, 0x0F, 0x90, 0xFC, 0xB8, 0x09, 0xD1,
+		0x14, 0x39, 0x0D, 0x84, 0xCE, 0x97, 0x88, 0x82,
+		0x3D, 0xC5, 0xCB, 0x1A, 0xBF, 0x00, 0x46, 0x37,
+		0x01, 0xF1, 0xCD, 0x46, 0xA2, 0x8F, 0x83, 0x19,
+		0x42, 0xED, 0x6F, 0xAF, 0x37, 0x1F, 0x18, 0x82,
+		0x4B, 0x70, 0x2D, 0x50, 0xA5, 0xA6, 0x66, 0x48,
+		0x7F, 0x56, 0xA8, 0x86, 0x05, 0x41, 0xC8, 0xBE,
+		0x4F, 0x8B, 0x38, 0x51, 0xF0, 0xEB, 0xAD, 0x2F,
+		0x7A, 0xC0, 0xEF, 0xC7, 0xD2, 0x72, 0x6F, 0x16,
+		0x66, 0xAF, 0x59, 0x55, 0xFF, 0xEE, 0x9D, 0x50,
+		0xE9, 0xDB, 0xF4, 0x02, 0xBC, 0x33, 0x5C, 0xC5,
+		0xDA, 0x1C, 0x6A, 0xD1, 0x55, 0xD1, 0x20, 0x2B,
+		0x63, 0x03, 0x4B, 0x77, 0x45, 0x46, 0x78, 0x31,
+		0xE4, 0x90, 0xB9, 0x7F, 0x00, 0xFB, 0x62, 0x7C,
+		0x07, 0xD3, 0xC1, 0x00, 0xA0, 0x54, 0x63, 0x74,
+		0x0A, 0x17, 0x7B, 0xE7, 0xAD, 0x38, 0x07, 0x86,
+		0x68, 0xE4, 0xFD, 0x20, 0x68, 0xD5, 0x33, 0x92,
+		0xCA, 0x90, 0xDD, 0xA4, 0xE9, 0xF2, 0x11, 0xBD,
+		0x9D, 0xA5, 0xF5, 0xEB, 0xB9, 0xFE, 0x8F, 0xA1,
+		0xE4, 0xBF, 0xA4, 0xA4, 0x34, 0x5C, 0x6A, 0x95,
+		0xB6, 0x42, 0x22, 0xF6, 0xD6, 0x10, 0x9C, 0x9B,
+		0x0A, 0x56, 0xE7, 0x42, 0xE5, 0x7F, 0x1F, 0x4E,
+		0xBE, 0x4F, 0x8C, 0xED, 0x30, 0x63, 0xA7, 0x88,
+		0x93, 0xED, 0x37, 0x3C, 0x80, 0xBC, 0xD1, 0x66,
+		0xBD, 0xB8, 0x2E, 0x65, 0xC4, 0xC8, 0x00, 0x5B,
+		0xE7, 0x85, 0x96, 0xDD, 0xAA, 0x05, 0xE6, 0x4F,
+		0x03, 0x64, 0xFA, 0x2D, 0xF6, 0x88, 0x14, 0x8F,
+		0x15, 0x4D, 0xFD, 0xD3
+	};
+	size_t keylen = 260;
+
+#ifdef HAVE_EVP_MD_CTX_NEW
+	ctx = EVP_MD_CTX_new();
+#else
+	ctx = (EVP_MD_CTX*)malloc(sizeof(*ctx));
+	if(ctx) EVP_MD_CTX_init(ctx);
+#endif
+	if(!ctx) return 0;
+
+	evp_key = sldns_key_rsa2pkey_raw(key, keylen);
+	if(!evp_key) {
+#ifdef HAVE_EVP_MD_CTX_NEW
+		EVP_MD_CTX_destroy(ctx);
+#else
+		EVP_MD_CTX_cleanup(ctx);
+		free(ctx);
+#endif
+		return 0;
+	}
+
+#ifndef HAVE_EVP_DIGESTVERIFY
+	(void)evp_key; /* not used */
+	if(EVP_DigestInit(ctx, EVP_sha1()) == 0)
+#else
+	if(EVP_DigestVerifyInit(ctx, NULL, EVP_sha1(), NULL, evp_key) == 0)
+#endif
+	{
+		unsigned long e = ERR_get_error();
+#ifdef EVP_R_INVALID_DIGEST
+		if (ERR_GET_LIB(e) == ERR_LIB_EVP &&
+			ERR_GET_REASON(e) == EVP_R_INVALID_DIGEST) {
+			/* rh-allow-sha1-signatures makes use of sha1 invalid. */
+			if(vsig)
+				printf("Detected that rh-allow-sha1-signatures is off, and disables SHA1 signatures\n");
+#ifdef HAVE_EVP_MD_CTX_NEW
+			EVP_MD_CTX_destroy(ctx);
+#else
+			EVP_MD_CTX_cleanup(ctx);
+			free(ctx);
+#endif
+			EVP_PKEY_free(evp_key);
+			return 1;
+		}
+#endif /* EVP_R_INVALID_DIGEST */
+		/* The signature verify failed for another reason. */
+		log_crypto_err_code("EVP_DigestVerifyInit", e);
+#ifdef HAVE_EVP_MD_CTX_NEW
+		EVP_MD_CTX_destroy(ctx);
+#else
+		EVP_MD_CTX_cleanup(ctx);
+		free(ctx);
+#endif
+		EVP_PKEY_free(evp_key);
+		return 0;
+	}
+#ifdef HAVE_EVP_MD_CTX_NEW
+	EVP_MD_CTX_destroy(ctx);
+#else
+	EVP_MD_CTX_cleanup(ctx);
+	free(ctx);
+#endif
+	EVP_PKEY_free(evp_key);
+	return 0;
+}
+#endif /* HAVE_SSL && USE_SHA1 */
+
 void 
 verify_test(void)
 {
 	unit_show_feature("signature verify");
+
+#if defined(HAVE_SSL) && defined(USE_SHA1)
+	if(rh_allow_sha1_signatures_disabled()) {
+		/* Allow the use of SHA1 signatures for the test,
+		 * in case that OpenSSL disallows use of RSASHA1
+		 * with rh-allow-sha1-signatures disabled. */
+		setenv("OPENSSL_ENABLE_SHA1_SIGNATURES", "1", 0);
+	}
+#endif
+
 #ifdef USE_SHA1
 	verifytest_file(SRCDIRSTR "/testdata/test_signatures.1", "20070818005004");
 #endif
