@@ -1,3 +1,6 @@
+25 April 2025: Wouter
+	- Fix #1272: assertion failure testcode/unitverify.c:202.
+
 16 April 2025: Wouter
 	- Increase default to `num-queries-per-thread: 2048`, when unbound is
 	  compiled with libevent. It makes saturation of the task queue more
